@@ -22,19 +22,24 @@
  */
 package nl.dtls.fairdatapoint.service.index.entry;
 
-import lombok.extern.log4j.Log4j2;
+import lombok.extern.slf4j.Slf4j;
 import nl.dtls.fairdatapoint.api.dto.index.entry.IndexEntryDTO;
 import nl.dtls.fairdatapoint.api.dto.index.entry.IndexEntryDetailDTO;
 import nl.dtls.fairdatapoint.api.dto.index.entry.IndexEntryInfoDTO;
 import nl.dtls.fairdatapoint.api.dto.index.entry.IndexEntryStateDTO;
 import nl.dtls.fairdatapoint.api.dto.index.ping.PingDTO;
 import nl.dtls.fairdatapoint.database.mongo.repository.IndexEntryRepository;
+import nl.dtls.fairdatapoint.database.rdf.repository.exception.MetadataRepositoryException;
+import nl.dtls.fairdatapoint.database.rdf.repository.generic.GenericMetadataRepository;
 import nl.dtls.fairdatapoint.entity.exception.ResourceNotFoundException;
 import nl.dtls.fairdatapoint.entity.index.entry.IndexEntry;
 import nl.dtls.fairdatapoint.entity.index.entry.IndexEntryState;
 import nl.dtls.fairdatapoint.service.index.common.RequiredEnabledIndexFeature;
 import nl.dtls.fairdatapoint.service.index.event.EventService;
+import nl.dtls.fairdatapoint.service.index.harvester.HarvesterService;
 import nl.dtls.fairdatapoint.service.index.settings.IndexSettingsService;
+import org.eclipse.rdf4j.model.Model;
+import org.eclipse.rdf4j.model.impl.TreeModel;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -45,15 +50,17 @@ import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static nl.dtls.fairdatapoint.api.dto.index.entry.IndexEntryStateDTO.*;
+import static nl.dtls.fairdatapoint.util.ValueFactoryHelper.i;
 
+@Slf4j
 @Service
 @Validated
-@Log4j2
 public class IndexEntryService {
+
+    private static final String MSG_NOT_FOUND = "Index entry not found";
 
     @Autowired
     private IndexEntryRepository repository;
@@ -67,6 +74,12 @@ public class IndexEntryService {
     @Autowired
     private IndexEntryMapper mapper;
 
+    @Autowired
+    private GenericMetadataRepository genericMetadataRepository;
+
+    @Autowired
+    private HarvesterService harvesterService;
+
     @RequiredEnabledIndexFeature
     public Iterable<IndexEntry> getAllEntries() {
         return repository.findAll();
@@ -74,20 +87,23 @@ public class IndexEntryService {
 
     @RequiredEnabledIndexFeature
     public List<IndexEntryDTO> getAllEntriesAsDTOs() {
-        Instant validThreshold = getValidThreshold();
-        return StreamSupport.stream(getAllEntries().spliterator(), true).map(it -> mapper.toDTO(it, validThreshold)).collect(Collectors.toList());
+        final Instant validThreshold = getValidThreshold();
+        return StreamSupport
+                .stream(getAllEntries().spliterator(), true)
+                .map(entry -> mapper.toDTO(entry, validThreshold))
+                .toList();
     }
 
     @RequiredEnabledIndexFeature
     public Page<IndexEntry> getEntriesPage(Pageable pageable, String state) {
-        Instant validThreshold = getValidThreshold();
+        final Instant validThreshold = getValidThreshold();
         if (state.equalsIgnoreCase(ACTIVE.name())) {
-            return repository.findAllByStateEqualsAndLastRetrievalTimeAfter(pageable, IndexEntryState.Valid,
-                    validThreshold);
+            return repository.findAllByStateEqualsAndLastRetrievalTimeAfter(pageable,
+                    IndexEntryState.Valid, validThreshold);
         }
         if (state.equalsIgnoreCase(IndexEntryStateDTO.INACTIVE.name())) {
-            return repository.findAllByStateEqualsAndLastRetrievalTimeBefore(pageable, IndexEntryState.Valid,
-                    validThreshold);
+            return repository.findAllByStateEqualsAndLastRetrievalTimeBefore(pageable,
+                    IndexEntryState.Valid, validThreshold);
         }
         if (state.equalsIgnoreCase(IndexEntryStateDTO.UNREACHABLE.name())) {
             return repository.findAllByStateEquals(pageable, IndexEntryState.Unreachable);
@@ -103,8 +119,9 @@ public class IndexEntryService {
 
     @RequiredEnabledIndexFeature
     public Page<IndexEntryDTO> getEntriesPageDTOs(Pageable pageable, String state) {
-        Instant validThreshold = getValidThreshold();
-        return getEntriesPage(pageable, state).map(it -> mapper.toDTO(it, validThreshold));
+        final Instant validThreshold = getValidThreshold();
+        return getEntriesPage(pageable, state)
+                .map(entry -> mapper.toDTO(entry, validThreshold));
     }
 
     @RequiredEnabledIndexFeature
@@ -114,36 +131,45 @@ public class IndexEntryService {
 
     @RequiredEnabledIndexFeature
     public Optional<IndexEntryDetailDTO> getEntryDetailDTO(String uuid) {
-        Instant validThreshold = getValidThreshold();
-        return getEntry(uuid).map(entry -> mapper.toDetailDTO(entry, eventService.getEvents(entry.getUuid()), validThreshold));
+        final Instant validThreshold = getValidThreshold();
+        return getEntry(uuid)
+                .map(entry -> {
+                    return mapper.toDetailDTO(
+                            entry, eventService.getEvents(entry.getUuid()), validThreshold
+                    );
+                });
     }
 
     @RequiredEnabledIndexFeature
     public IndexEntryInfoDTO getEntriesInfo() {
-        Instant validThreshold = getValidThreshold();
-        Map<String, Long> entriesCount = new HashMap<>();
+        final Instant validThreshold = getValidThreshold();
+        final Map<String, Long> entriesCount = new HashMap<>();
         entriesCount.put("ALL", repository.count());
         entriesCount.put(UNKNOWN.name(), repository.countAllByStateEquals(IndexEntryState.Unknown));
         entriesCount.put(ACTIVE.name(),
-                repository.countAllByStateEqualsAndLastRetrievalTimeAfter(IndexEntryState.Valid, validThreshold));
+                repository.countAllByStateEqualsAndLastRetrievalTimeAfter(
+                        IndexEntryState.Valid, validThreshold));
         entriesCount.put(INACTIVE.name(),
-                repository.countAllByStateEqualsAndLastRetrievalTimeBefore(IndexEntryState.Valid, validThreshold));
-        entriesCount.put(UNREACHABLE.name(), repository.countAllByStateEquals(IndexEntryState.Unreachable));
+                repository.countAllByStateEqualsAndLastRetrievalTimeBefore(
+                        IndexEntryState.Valid, validThreshold));
+        entriesCount.put(UNREACHABLE.name(), repository.countAllByStateEquals(
+                IndexEntryState.Unreachable));
         entriesCount.put(INVALID.name(), repository.countAllByStateEquals(IndexEntryState.Invalid));
         return new IndexEntryInfoDTO(entriesCount);
     }
 
     @RequiredEnabledIndexFeature
     public IndexEntry storeEntry(@Valid PingDTO pingDTO) {
-        var clientUrl = pingDTO.getClientUrl();
-        var entity = repository.findByClientUrl(clientUrl);
-        var now = Instant.now();
+        final String clientUrl = pingDTO.getClientUrl();
+        final Optional<IndexEntry> entity = repository.findByClientUrl(clientUrl);
+        final Instant now = Instant.now();
 
         final IndexEntry entry;
         if (entity.isPresent()) {
             log.info("Updating timestamp of existing entry {}", clientUrl);
             entry = entity.orElseThrow();
-        } else {
+        }
+        else {
             log.info("Storing new entry {}", clientUrl);
             entry = new IndexEntry();
             entry.setUuid(UUID.randomUUID().toString());
@@ -157,12 +183,25 @@ public class IndexEntryService {
 
     @RequiredEnabledIndexFeature
     @PreAuthorize("hasRole('ADMIN')")
-    public void deleteEntry(String uuid) {
-        IndexEntry entry = repository.findByUuid(uuid).orElseThrow(() -> new ResourceNotFoundException("Index entry not found"));
+    public void deleteEntry(String uuid) throws MetadataRepositoryException {
+        final IndexEntry entry = repository.findByUuid(uuid)
+                .orElseThrow(() -> new ResourceNotFoundException(MSG_NOT_FOUND));
+        harvesterService.deleteHarvestedData(entry.getClientUrl());
         repository.delete(entry);
     }
 
     private Instant getValidThreshold() {
-        return Instant.now().minus(indexSettingsService.getOrDefaults().getPing().getValidDuration());
+        return Instant.now()
+                .minus(indexSettingsService.getOrDefaults().getPing().getValidDuration());
+    }
+
+    @RequiredEnabledIndexFeature
+    public Model getEntryHarvestedData(String uuid) throws MetadataRepositoryException {
+        final IndexEntry entry = repository
+                .findByUuid(uuid)
+                .orElseThrow(() -> new ResourceNotFoundException(MSG_NOT_FOUND));
+        final Model model = new TreeModel();
+        model.addAll(genericMetadataRepository.find(i(entry.getClientUrl())));
+        return model;
     }
 }
