@@ -22,7 +22,7 @@
  */
 package nl.dtls.fairdatapoint.service.index.harvester;
 
-import lombok.extern.log4j.Log4j2;
+import lombok.extern.slf4j.Slf4j;
 import nl.dtls.fairdatapoint.database.rdf.repository.exception.MetadataRepositoryException;
 import nl.dtls.fairdatapoint.database.rdf.repository.generic.GenericMetadataRepository;
 import org.eclipse.rdf4j.model.IRI;
@@ -44,9 +44,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import static java.lang.String.format;
 import static java.util.Optional.ofNullable;
 import static nl.dtls.fairdatapoint.entity.metadata.MetadataGetter.getChildren;
 import static nl.dtls.fairdatapoint.util.HttpUtil.getRdfContentType;
@@ -56,102 +54,117 @@ import static nl.dtls.fairdatapoint.util.RdfUtil.getObjectsBy;
 import static nl.dtls.fairdatapoint.util.RdfUtil.getSubjectsBy;
 import static nl.dtls.fairdatapoint.util.ValueFactoryHelper.i;
 
+@Slf4j
 @Service
-@Log4j2
 public class HarvesterService {
 
     private static final String DEFAULT_NAVIGATION_SHACL = "defaultNavigationShacl.ttl";
 
     @Autowired
-    private RestTemplate restTemplate;
+    private GenericMetadataRepository genericMetadataRepository;
 
     @Autowired
-    private GenericMetadataRepository genericMetadataRepository;
+    private RestTemplate restTemplate;
+
+    public void deleteHarvestedData(String clientUrl) throws MetadataRepositoryException {
+        genericMetadataRepository.remove(i(clientUrl));
+    }
 
     @Async
     public void harvest(String clientUrl) throws MetadataRepositoryException {
-        log.info(format("Start harvesting '%s'", clientUrl));
+        log.info("Start harvesting '{}'", clientUrl);
+
+        // 0. Remove previously harvested metadata
+        deleteHarvestedData(clientUrl);
 
         // 1. Get navigation relationships
-        List<IRI> navigationRelationships = getNavigationRelationships(clientUrl);
+        final List<IRI> navigationRelationships = getNavigationRelationships(clientUrl);
 
         // 2. Harvest data
-        Map<String, Model> result = visitNode(clientUrl, navigationRelationships, new HashMap<>());
+        final Map<String, Model> result = new HashMap<>();
+        visitNode(clientUrl, navigationRelationships, result);
 
         // 3. Store data
         for (Map.Entry<String, Model> item : result.entrySet()) {
-            genericMetadataRepository.save(new ArrayList<>(item.getValue()), i(item.getKey()));
+            genericMetadataRepository.save(new ArrayList<>(item.getValue()), i(clientUrl));
         }
 
-        log.info(format("Harvesting for '%s' completed", clientUrl));
+        log.info("Harvesting for '{}' completed", clientUrl);
     }
 
     private List<IRI> getNavigationRelationships(String uri) {
-        Model model = readFile(DEFAULT_NAVIGATION_SHACL, "http://fairdatapoint.org");
+        final Model model = readFile(DEFAULT_NAVIGATION_SHACL, "http://fairdatapoint.org");
         return getObjectsBy(model, null, "http://www.w3.org/ns/shacl#path")
                 .stream()
-                .map(i -> i(i.stringValue()))
+                .map(object -> i(object.stringValue()))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private Map<String, Model> visitNode(String uri, List<IRI> relationships, Map<String, Model> nodes) {
+    private void visitNode(
+            String uri, List<IRI> relationships, Map<String, Model> nodes
+    ) {
         try {
-            Model model = makeRequest(uri);
+            final Model model = makeRequest(uri);
             nodes.put(uri, model);
 
-            List<Resource> containers = getSubjectsBy(model, RDF.TYPE, LDP.DIRECT_CONTAINER);
+            final List<Resource> containers = getSubjectsBy(model, RDF.TYPE, LDP.DIRECT_CONTAINER);
             if (containers.size() > 0) {
                 // Get children through LDP links
                 for (Value container : containers) {
-                    for (Value child : getObjectsBy(model, i(container.stringValue()), LDP.CONTAINS)) {
+                    for (Value child : getObjectsBy(
+                            model, i(container.stringValue()), LDP.CONTAINS
+                    )) {
                         if (!nodes.containsKey(child.stringValue())) {
-                            nodes = visitNode(child.stringValue(), relationships, nodes);
-                        }
-                    }
-                }
-            } else {
-                // Get children through default navigation SHACL
-                for (IRI relationship : relationships) {
-                    List<IRI> children = getChildren(model, relationship);
-                    for (IRI child : children) {
-                        if (!nodes.containsKey(child.stringValue())) {
-                            nodes = visitNode(child.stringValue(), relationships, nodes);
+                            visitNode(child.stringValue(), relationships, nodes);
                         }
                     }
                 }
             }
-
-            return nodes;
-        } catch (HttpClientErrorException ex) {
-            return nodes;
+            else {
+                // Get children through default navigation SHACL
+                for (IRI relationship : relationships) {
+                    final List<IRI> children = getChildren(model, relationship);
+                    for (IRI child : children) {
+                        if (!nodes.containsKey(child.stringValue())) {
+                            visitNode(child.stringValue(), relationships, nodes);
+                        }
+                    }
+                }
+            }
+        }
+        catch (HttpClientErrorException exception) {
+            log.debug("HttpClientErrorException occurred for {}: {}", uri, exception);
         }
     }
 
     private Model makeRequest(String uri) {
-        log.info(format("Making request to '%s'", uri));
-        HttpHeaders headers = new HttpHeaders();
+        log.info("Making request to '{}'", uri);
+        final HttpHeaders headers = new HttpHeaders();
         headers.setAccept(List.of(MediaType.parseMediaType(RDFFormat.TURTLE.getDefaultMIMEType())));
-        HttpEntity<Void> entity = new HttpEntity<>(null, headers);
+        final HttpEntity<Void> entity = new HttpEntity<>(null, headers);
         try {
-            ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.GET, entity, String.class);
+            final ResponseEntity<String> response =
+                    restTemplate.exchange(uri, HttpMethod.GET, entity, String.class);
             if (!response.getStatusCode().is2xxSuccessful()) {
-                log.info(format("Request to '%s' failed", uri));
+                log.info("Request to '{}' failed ({})", uri, response.getStatusCode());
                 throw new HttpClientErrorException(response.getStatusCode());
             }
-            RDFFormat rdfContentType = getRdfContentType(response.getHeaders().getContentType().getType());
-            log.info(format("Request to '%s' successfully received", uri));
-            Model result = read(response.getBody(), uri, rdfContentType);
-            log.info(format("Request to '%s' successfully parsed", uri));
+            final RDFFormat rdfContentType =
+                    getRdfContentType(response.getHeaders().getContentType().getType());
+            log.info("Request to '{}' successfully received", uri);
+            final Model result = read(response.getBody(), uri, rdfContentType);
+            log.info("Request to '{}' successfully parsed", uri);
             return result;
-        } catch (RestClientException e) {
-            log.info(format("Request to '%s' failed", uri));
+        }
+        catch (RestClientException exception) {
+            log.info("Request to '{}' failed: {}", uri, exception.getMessage());
             throw new HttpClientErrorException(
                     HttpStatus.BAD_GATEWAY,
-                    ofNullable(e.getMessage()).orElse("HTTP request failed to proceed")
+                    ofNullable(exception.getMessage())
+                            .orElse("HTTP request failed to proceed")
             );
         }
     }
-
 
 }
